--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "start": "node nutrilife_server.js"
   },
+  "main":"nutrilife_server.js",
   "dependencies": {
     "express": "3.2.5",
     "mongojs":"0.13.0",
     "nodemailer":"1.0",
     "nodemailer-sendgrid-transport":"*",
-    "sendgrid":"1.3.0"
+    "sendgrid":"1.3.0",
+	"cors":"2.5.3"
   },
   "engines": {
     "node": "0.10.22"
